tests/testdata/positive/func_basic.go
package main
func add(a int, b int) int {
  return a + b;
}
func main() {
  fmt.Println(add(3, 4));
  x := add(10, 5);
  fmt.Println(x);
}
