tests/testdata/negative/wrong_arg_count.go
package main
func add(a int, b int) int {
  return a + b;
}
func main() {
  fmt.Println(add(1));
}
